# apiflask-demo

./: .flaskenv  .gitignore  README.md  pyproject.toml
settings/: settings-example.yaml  settings_example.yaml  uwsgi.ini
src/: app.py  configs.py  extends.py  wsgi.py
src/blueprints/: default.py  root_bp.py
src/blueprints/apis/: __init__.py  urls.py
src/blueprints/apis/system_manage/: __init__.py  urls.py
src/blueprints/apis/system_manage/function_manage/: urls.py
src/blueprints/apis/system_manage/role_manage/: urls.py
src/blueprints/apis/system_manage/user_manage/: urls.py
src/controllers/: api_health_controller.py  defalut_controller.py
src/cruds/: __init__.py  db_health_cruds.py
src/logics/: __init__.py  api_health_logic.py  default_logics.py
src/services/custom_enums/: action_type_enums.py  resource_enums.py  response_type_enums.py  result_enums.py  status_enums.py
src/services/enums/: __init__.py  messages_enums.py  status_enums.py
src/services/utils/: __init__.py  datetime_utils.py  general_utils.py  return_utils.py  secret_utils.py  security_utils.py
