[project]
name = "apiflask-demo"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "apiflask==3.0.2",
    "bcrypt==5.0.0",
    "flask-cors==6.0.2",
    "flask-sqlalchemy==3.1.1",
    "pymysql==1.1.2",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "shortuuid==1.0.13",
]
